# OpenGl-Study

./: CMakeLists.txt
include/: shaderprogram.hpp  square.hpp
include/glad/: glad.h
shaders/: simplefs.glsl  simplevs.glsl
src/: glad.c  main.cpp  shaderprogram.cpp  square.cpp
